Bug 48683 - nice crash when hitting DEL (on certain slide / line with url ? )
Summary: nice crash when hitting DEL (on certain slide / line with url ? )
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
Master old -3.6
Hardware: Other Linux (All)
: medium critical
Assignee: Not Assigned
URL:
Whiteboard: target:3.6.0
Keywords: regression
Depends on:
Blocks:
 
Reported: 2012-04-14 04:07 UTC by Cor Nouws
Modified: 2012-04-14 09:16 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
presentation with on silde to see the crash (240.40 KB, application/vnd.oasis.opendocument.presentation)
2012-04-14 04:07 UTC, Cor Nouws
Details
bt (6.99 KB, text/plain)
2012-04-14 06:25 UTC, Julien Nabet
Details
valgrind (18.65 KB, text/plain)
2012-04-14 06:25 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Cor Nouws 2012-04-14 04:07:10 UTC
Created attachment 59963 [details]
presentation with on silde to see the crash

attached a presentation with one slide

- put cursor in front of the second link, where one space is
  (so this is the line below "Versie 3.4"
- DEL
 > crash

My version is 
 
http://dev-builds.libreoffice.org/daily/Linux-x86_10-Release_Configuration/master/current/master~2012-04-10_16.04.34_LibO-Dev_3.6.0alpha0_Linux_x86_install-deb_en-US.tar.gz
from
 
http://dev-builds.libreoffice.org/daily/Linux-x86_10-Release_Configuration/master/current/
Comment 1 Julien Nabet 2012-04-14 06:25:27 UTC
Created attachment 59969 [details]
bt

On master updated today (pc Debian x86-64), I reproduced the pb.
I attached bt with symbols
Comment 2 Julien Nabet 2012-04-14 06:25:53 UTC
Created attachment 59970 [details]
valgrind

And valgrind trace too.
Comment 3 Not Assigned 2012-04-14 09:10:56 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=95cc5de63b20c5986fe8f3913da86002eabd7cb1

Resolves: fdo#48683 nice crash when hitting DEL
Comment 4 Julien Nabet 2012-04-14 09:16:00 UTC
I pushed a fix on master which had been proposed on dev mailing list (see http://nabble.documentfoundation.org/PATCH-fix-proposed-for-fdo-48683-td3910199.html).