Resolves: fdo#48683 nice crash when hitting DEL